--- a/assignments/week-7-assignment-6/iRemember/AndroidManifest.xml
+++ b/assignments/week-7-assignment-6/iRemember/AndroidManifest.xml
@@ -53,9 +53,7 @@
         <activity
             android:name="edu.vuum.mocca.ui.SoundRecordActivity"
             android:label="@string/title_activity_sound_record">
-            <intent-filter> 										<!-- Line 56 -->
-                <action android:name="android.intent.action.TIMEZONE_CHANGED" />
-            </intent-filter>
+                     <!-- REMOVED INTENT FILTER -->
         </activity>
         
     </application>
